--- a/src/components/Jumbotron/jumbotron.css
+++ b/src/components/Jumbotron/jumbotron.css
@@ -2,14 +2,19 @@
   height: 950px;
   background-color: black;
   text-align: center;
+  padding-top: 250px;
 }
 
 .nameLead {
   color: rgb(41, 171, 223);
   font-size: 100px;
+  font-family: "Martel", serif;
+  font-style: bold;
 }
 
 .titleLead {
   color: white;
   font-size: 50px;
+  font-style: bold;
+  font-family: "Rambla", sans-serif;
 }
