--- a/src/components/Jumbotron/jumbotron.css
+++ b/src/components/Jumbotron/jumbotron.css
@@ -1,5 +1,5 @@
 .jumbo {
-  height: 950px;
+  height: 100vh;
   background-color: black;
   text-align: center;
   padding-top: 250px;
@@ -17,4 +17,14 @@
   font-size: 50px;
   font-style: bold;
   font-family: "Rambla", sans-serif;
+}
+
+@media only screen and (max-width: 600px) {
+  .nameLead {
+    font-size: 30px;
+  }
+
+  .titleLead {
+    font-size: 25px;
+  }
 }
