--- a/src/components/Project/Projects.css
+++ b/src/components/Project/Projects.css
@@ -1,7 +1,31 @@
 .image {
   width: 100%;
+  opacity: 0.5;
+}
+
+img {
+  vertical-align: middle;
+  border-style: solid;
+  border-color: black;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
 }
 .projectRow {
   padding-top: 100px;
   margin-bottom: 100px;
+}
+
+.project-name {
+  text-align: center;
+}
+
+.description {
+  font-size: 20px;
+  text-align: center;
+}
+
+.image:hover {
+  opacity: 1;
 }
