added buttons to project container, adjusted styling

--- a/src/components/Project/ProjectContainer.css
+++ b/src/components/Project/ProjectContainer.css
@@ -4,6 +4,7 @@
   background-size: cover; */
   background-color: white;
   font-family: "Rambla", sans-serif;
+  padding-bottom: 40px;
 }
 .projContainerHeader {
   font-size: 100px;
