--- a/src/components/Project/Projects.css
+++ b/src/components/Project/Projects.css
@@ -1,6 +1,6 @@
 .image {
   width: 100%;
-  opacity: 0.5;
+  opacity: 1;
 }
 
 img {
@@ -26,6 +26,30 @@ img {
   text-align: center;
 }
 
-.image:hover {
-  opacity: 1;
+.img-view-app {
+  background-color: white;
+  color: black;
+  border-color: black;
+  border-style: solid;
+  border-width: 0.15em;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+
+  font-family: "Rambla", sans-serif;
+}
+.img-view-app:hover {
+  background-color: black;
+  color: white;
+  border-color: rgb(228, 226, 226);
+}
+
+.button-group {
+  display: flex;
+  justify-content: center;
+}
+
+Button {
+  margin: 8px;
 }
