additional text styling and coloring

--- a/src/components/Jumbotron/jumbotron.css
+++ b/src/components/Jumbotron/jumbotron.css
@@ -11,6 +11,7 @@
   font-size: 100px;
   font-family: "Martel", serif;
   font-style: bold;
+  text-shadow: -1px -1px 3px #020202, 2px 2px 4px white;
 }
 
 .titleLead {
@@ -18,6 +19,8 @@
   font-size: 50px;
   font-style: bold;
   font-family: "Rambla", sans-serif;
+
+  text-shadow: -1px -1px 3px #020202, 2px 2px 4px white;
 }
 
 @media only screen and (max-width: 600px) {
