--- a/src/components/Jumbotron/jumbotron.css
+++ b/src/components/Jumbotron/jumbotron.css
@@ -8,8 +8,9 @@
 
 .nameLead {
   color: rgb(41, 171, 223);
-  font-size: 100px;
-  font-family: "Martel", serif;
+  font-size: 200px;
+  font-family: "Rambla", sans-serif;
+
   font-style: bold;
   text-shadow: -1px -1px 3px #020202, 2px 2px 4px white;
 }
