--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,6 +1,45 @@
+.skills-row {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 75px;
+  margin-bottom: 100px;
+}
+
 .skills {
-  height: 100vh;
-  background-color: rgb(41, 171, 223);
-  color: white;
-  font-size: 40px;
+  height: fit-content;
+  background-color: white;
+  color: black;
+  font-family: "Rambla", sans-serif;
+}
+
+.skillsContainerHeader {
+  font-size: 100px;
+  text-align: center;
+  text-shadow: -1px -1px 3px white, 2px 2px 4px #1b1b1b;
+}
+
+.skillsContainerSubHeader {
+  font-size: 30px;
+  text-align: center;
+  text-shadow: -1px -1px 3px white, 2px 2px 4px #1b1b1b;
+}
+
+.snippet {
+  text-align: center;
+  color: black;
+  font-family: "Rambla", sans-serif;
+  font-size: 20px;
+}
+.sub-snippet-card {
+  margin-bottom: 20px;
+}
+
+#header-break {
+  width: 50%;
+  border-width: 0.3em;
+  border-color: black;
+}
+
+.icons {
+  font-size: 60px;
 }
