--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -21,3 +21,20 @@
 .contact-align {
   justify-content: center;
 }
+
+@media only screen and (max-width: 600px) {
+  .contact-page {
+    padding-top: 40px;
+    font-size: 30px;
+    height: 100vh;
+  }
+
+  .contact-section {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .footer-text {
+    font-size: 20px;
+  }
+}
