--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,8 @@
 .navbar {
-  background-color: black !important;
+  background-color: transparent !important;
 }
 
 i {
   color: rgb(41, 171, 223);
   font-size: 30px;
-  text-shadow: -1px -1px 3px #020202, 2px 2px 4px white;
 }
