--- a/src/components/Jumbotron/jumbotron.css
+++ b/src/components/Jumbotron/jumbotron.css
@@ -22,7 +22,18 @@
   font-family: "Rambla", sans-serif;
   text-shadow: -1px -1px 3px #020202, 2px 2px 4px white;
 }
+@media only screen and (max-width: 1000px) {
+  .jumbo {
+    padding-top: 45px;
+  }
+  .nameLead {
+    font-size: 80px;
+  }
 
+  .titleLead {
+    font-size: 30px;
+  }
+}
 @media only screen and (max-width: 600px) {
   .jumbo {
     padding-top: 100px;
