--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -4,7 +4,7 @@
   color: white;
   font-size: 40px;
   text-align: center;
-  font-family: "Rambla", sans-serif;
+  font-family: "Raleway", sans-serif;
   padding-top: 250px;
   margin-left: 0px;
   margin-right: 0px;
