--- a/src/components/Project/ProjectContainer.css
+++ b/src/components/Project/ProjectContainer.css
@@ -2,7 +2,7 @@
   height: fit-content;
   background-color: white;
   background-image: url("/images/background-cement-concrete-paint-242236.jpg");
-  font-family: "Rambla", sans-serif;
+  font-family: "Raleway", sans-serif;
   padding-bottom: 40px;
   padding-top: 80px;
 }
