--- a/src/components/Jumbotron/jumbotron.css
+++ b/src/components/Jumbotron/jumbotron.css
@@ -7,7 +7,7 @@
 }
 
 .nameLead {
-  color: rgb(41, 171, 223);
+  color: #4fc3f7;
   font-size: 125px;
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -18,7 +18,7 @@
   font-size: 50px;
   font-style: bold;
   font-family: "Raleway", sans-serif;
-  text-shadow: -1px -1px 3px #020202, 2px 2px 4px rgb(41, 171, 223);
+  text-shadow: -1px -1px 3px #020202, 2px 2px 4px #4fc3f7;
 }
 
 @media only screen and (max-width: 960px) {
