--- a/src/components/Jumbotron/jumbotron.css
+++ b/src/components/Jumbotron/jumbotron.css
@@ -11,17 +11,18 @@
 
 .nameLead {
   color: #4fc3f7;
-  font-size: 125px;
+  font-size: 100px;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   position: absolute;
   top: 0px;
   right: -150px;
+  margin-right: 50px;
 }
 
 .titleLead {
   color: white;
-  font-size: 50px;
+  font-size: 40px;
   font-style: bold;
   font-family: "Raleway", sans-serif;
   text-shadow: -1px -1px 3px #020202, 2px 2px 4px #4fc3f7;
